--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/isomorphic-fetch": "0.0.33",
     "@types/jest": "^19.2.2",
     "@types/node": "^7.0.8",
     "@types/react": "^15.0.16",
@@ -14,9 +15,6 @@
   },
   "devDependencies": {
     "add": "^2.0.6",
-    "node-sass": "^4.5.0",
-    "sass-loader": "^6.0.3",
-    "yarn": "^0.21.3",
     "autoprefixer": "6.7.2",
     "case-sensitive-paths-webpack-plugin": "1.1.4",
     "chalk": "1.1.3",
@@ -35,11 +33,13 @@
     "http-proxy-middleware": "0.17.3",
     "jest": "18.1.0",
     "json-loader": "0.5.4",
+    "node-sass": "^4.5.0",
     "object-assign": "4.1.1",
     "postcss-loader": "1.2.2",
     "promise": "7.1.1",
     "react-dev-utils": "^0.4.2",
     "recursive-readdir": "2.1.0",
+    "sass-loader": "^6.0.3",
     "strip-ansi": "3.0.1",
     "style-loader": "0.13.1",
     "ts-loader": "^1.3.1",
@@ -51,7 +51,8 @@
     "webpack": "1.14.0",
     "webpack-dev-server": "1.16.2",
     "webpack-manifest-plugin": "1.1.0",
-    "whatwg-fetch": "2.0.2"
+    "whatwg-fetch": "2.0.2",
+    "yarn": "^0.21.3"
   },
   "scripts": {
     "server": "node scripts/start.js",
